@@ -13,7 +13,10 @@
     * -XX:+UseGCLogFileRotation (GC 로그 로테이션 여부)
     * -XX:GCLogFileSize=50m (GC 로그 사이즈)
     * -XX:NumberOfGCLogFiles=5 (GC 로그 갯수)
-    * -XX:+PrintGCDetails (디테일하게)
+    * -Xloggc:/log/gc.log (GC 로그 경로 및 파일 지정)
+    * -XX:+PrintGCDetails (디테일하게 노출)
+    * -XX:+PrintGCTimeStamps (GC 발생 시간 : 애플리케이션 띄어지고 나서 경과된 시간)
+    * -XX:+PrintGCDateStamps (GC 발생 시간 : 현재 설정된 타임존 시간 기준)
 
 ## reference
 * [gradle application plugins](https://docs.gradle.org/current/userguide/application_plugin.html)
